--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <h1 id="event-title"></h1>
     <div class="search-container">
       <input type="text" id="search-bar" placeholder="Search by category...">
+      <input type="text" id="speaker-search-bar" placeholder="Search by speaker...">
     </div>
   </header>
   <main id="schedule-container"></main>
